# gamepad-overlay

./: .gitignore  Dockerfile  README-overlay.md  README-server.md  README.md  build.ps1  build.sh  checks  compose.yml  concept.html  gamepad-input-sources.js  gamepad-overlay-canvas2d.html  gamepad-overlay-canvas2d.js  gamepad-overlay-raster-common.js  gamepad-overlay-svg.js  gamepad-overlay-webgl.html  gamepad-overlay-webgl.js  gamepad-overlay.html  gamepad-overlay.spec  gamepad-server.spec  mine.html  overlay-app.js  overlay-bootstrap.js  overlay-domain.js  overlay-layout-snes.js  overlay-layout-xbox-digital-triggers.js  overlay-layout-xbox.js  overlay-renderer-svg.js  overlay-shell.css  overlay-spec.js  overlay-theme-snes.css  overlay-theme-xbox.css  overlay-theme.js  pyproject.toml  svg-shapes.js
.github/workflows/: pages.yml  release.yml  test-publish.yml
gamepad-websocket-server/: .gitignore  README.md  checks  compose.yml  pyproject.toml
gamepad-websocket-server/src/gamepad_websocket_server/: __main__.py  application.py  cli_output.py  websocket_server.py
gamepad-websocket-server/typings/sdl2/: __init__.pyi
overlay/: README.md  overlay-app.js  overlay-layout-snes.js  overlay-layout-xbox-digital-triggers.js  overlay-layout-xbox.js  overlay-renderer-svg.js  overlay-shell.css  overlay-spec.js
server/: Dockerfile  README.md  gamepad-server.spec  pyproject.toml
server/src/gamepad_server/: websocket_server.py
server/src/gamepad_websocket_server/: application.py  tray.py
server/tests/: test_tray.py
src/gamepad_overlay/: __init__.py  application.py  cli_output.py  config.py  gamepad.py  gamepad_selector.py  server.py  tk_utils.py  tray.py  tray_backend.py  tray_render.py  tray_sni.py  tray_window.py  tray_xembed.py  websocket_server.py
src/gamepad_overlay/overlay_assets/: gamepad-input-sources.js  index.html  overlay-app.js  overlay-core.js  overlay-layout-snes.js  overlay-layout-xbox-digital-triggers.js  overlay-layout-xbox.js  overlay-renderer-svg.js  overlay-spec.js  overlay-theme-snes.css  overlay-theme-xbox.css
src/gamepad_server/: application.py  tray.py  websocket_server.py
src/gamepad_server/overlay_assets/: overlay-app.js  overlay-core.js  overlay-layout-xbox.js
tests/: test_package_metadata.py  test_tray.py
typings/Xlib/: X.pyi  Xutil.pyi  __init__.pyi  display.pyi  error.pyi  threaded.pyi
typings/Xlib/protocol/: event.pyi
