[build-system]
requires = ["hatchling (>=1.29.0,<2.0.0)", "hatch-vcs (>=0.5.0,<1.0.0)"]
build-backend = "hatchling.build"

[project]
name = "gamepad-overlay"
version = "0.1.0"
description = "Reads gamepad input and serves a local OBS overlay."
authors = [
    {name = "Jacob McIntosh",email = "nacitar.sevaht@gmail.com"}
]
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=12.2.0",
    "PySDL3>=0.9.11b1",
    "sevaht-utility",
    "websockets>=16.0",
    # Windows/macOS tray uses pystray; Linux uses the StatusNotifierItem
    # (dbus-next) backend, falling back to a self-contained XEmbed icon
    # (python-xlib) on bare X11 window managers with no SNI host.
    "pystray>=0.19.5; sys_platform == 'win32' or sys_platform == 'darwin'",
    "dbus-next>=0.2.3; sys_platform == 'linux'",
    "python-xlib>=0.33; sys_platform == 'linux'",
    "platformdirs>=4.10.0",
]

[project.scripts]
gamepad-overlay = "gamepad_overlay.__main__:main"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "build (>=1.4.2,<2.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "twine (>=6.2.0,<7.0.0)",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/gamepad_overlay"]

[tool.entrypoint]
module = "gamepad_overlay"

[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.mypy]
strict = true
mypy_path = ["typings"]
exclude = ["^release/"]

[[tool.mypy.overrides]]
module = "gamepad_overlay.tray_sni"
ignore_errors = true

# pystray is a Windows/macOS-only dependency (not installed on Linux, where the
# linters run) and ships no type stubs.
[[tool.mypy.overrides]]
module = "pystray"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-ignore = ["COM812", "COM819", "E203", "E501", "TD003"]
select = [
    "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C4", "C90", "COM",
    "DTZ", "E", "EM", "ERA", "F", "FA", "FLY", "FURB", "I",
    "ISC", "LOG", "N", "PERF", "PGH", "PIE", "PLR", "PLW", "PTH",
    "Q", "RET", "RSE", "RUF", "S", "SIM", "TC", "TCH", "TD",
    "TID", "TRY", "UP"
]

[tool.ruff.lint.per-file-ignores]
"checks" = ["S603"]
"tests/**/*" = ["PLR2004", "S101"]
"**/tray_sni.py" = ["ANN201", "ARG002", "F722", "F821", "N802", "UP037"]
"typings/Xlib/**/*.pyi" = ["ANN401", "A002", "N818"]

[tool.uv.sources]
sevaht-utility = { git = "https://github.com/nacitar/sevaht-utility.git", rev = "main" }
